--- a/writedown/period.noneq.msm/ref.bib
+++ b/writedown/period.noneq.msm/ref.bib
@@ -189,6 +189,48 @@
   publisher={ACS Publications}
 }
 
+@Article{kohlhoff2014cloud,
+  Title                    = {Cloud-based simulations on Google Exacycle reveal ligand modulation of GPCR activation pathways},
+  Author                   = {Kohlhoff, Kai J and Shukla, Diwakar and Lawrenz, Morgan and Bowman, Gregory R and Konerding, David E and Belov, Dan and Altman, Russ B and Pande, Vijay S},
+  Journal                  = {Nature chemistry},
+  Year                     = {2014},
+  Number                   = {1},
+  Pages                    = {15--21},
+  Volume                   = {6},
+
+  File                     = {kohlhoff2014cloud.pdf:/home/wanghan/study/pdfPool/kohlhoff2014cloud.pdf:PDF},
+  Publisher                = {Nature Publishing Group},
+  Timestamp                = {2014.10.01}
+}
+
+@Article{bekard2013electric,
+  Title                    = {Electric field induced changes in protein conformation},
+  Author                   = {Bekard, I. and Dunstan, D.E.},
+  Journal                  = {Soft Matter},
+  Year                     = {2014},
+  Pages                    = {-},
+
+  Abstract                 = {The effect of a low strength oscillating electric field on the conformation of Bovine Serum Albumin (BSA) and Lysozyme in solution has been measured. A purpose built cell has been used to measure the real time autofluorescence and Circular Dichroism of the protein solutions exposed to electric fields of differing strength and frequency. Exposure to the electric fields results in protein unfolding for both Lysozyme and BSA. The applied field strengths are extremely small compared to the protein inter-chain intra-molecular forces. We propose a model whereby the electrophoretic motion of the proteins leads to a frictional force that results in protein unfolding. For BSA and Lysozyme in the electric fields used in this study{,} the shear rates at the protein surface under electrophoretic motion are of order 103 and 104 s-1 respectively. Prolonged electric field exposure results in significant frictional energy dissipation in the proteins. The energy dissipated in the proteins results in protein unfolding{,} which is a critical initial step for protein aggregation and potentially amyloid fibril formation.},
+  Doi                      = {10.1039/C3SM52653D},
+  File                     = {bekard2013electric.pdf:bekard2013electric.pdf:PDF},
+  Publisher                = {The Royal Society of Chemistry},
+  Timestamp                = {2013.12.02},
+  Url                      = {http://dx.doi.org/10.1039/C3SM52653D}
+}
+
+@Article{dePomerai2003microwave,
+  Title                    = {Microwave radiation can alter protein conformation without bulk heating},
+  Author                   = {de Pomerai, David I and Smith, Brette and Dawe, Adam and North, Kate and Smith, Tim and Archer, David B and Duce, Ian R and Jones, Donald and Candido, E Peter M},
+  Journal                  = {FEBS letters},
+  Year                     = {2003},
+  Number                   = {1},
+  Pages                    = {93--97},
+  Volume                   = {543},
+
+  File                     = {dePomerai2003microwave.pdf:dePomerai2003microwave.pdf:PDF},
+  Publisher                = {Elsevier},
+  Timestamp                = {2013.07.26}
+}
 @ARTICLE{born2009terahertz,
   author = {Born, Benjamin and Kim, Seung Joong and Ebbinghaus, Simon and Gruebele,
 	Martin and Havenith, Martina},
